--- a/main.tex
+++ b/main.tex
@@ -1,15 +1,34 @@
-\documentclass{article}
-\usepackage{graphicx} % Required for inserting images
+\documentclass[12pt]{article}
+% We can write notes using the percent symbol!
+% The first line above is to announce we are beginning a document, an article in this case, and we want the default font size to be 12pt
+\usepackage[utf8]{inputenc}
+% This is a package to accept utf8 input.  I normally do not use it in my documents, but it was here by default in Overleaf.
+\usepackage{pgfplots}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amsthm}
+% These three packages are from the American Mathematical Society and includes all of the important symbols and operations 
+\usepackage{fullpage}
+% By default, an article has some vary large margins to fit the smaller page format.  This allows us to use more standard margins.
 
-\title{CSE541 Advanced Algorithm Notes}
-\author{Marco Tam }
-\date{April 2023}
+\setlength{\parskip}{1em}
+% This gives us a full line break when we write a new paragraph
 
 \begin{document}
+% Once we have all of our packages and setting announced, we need to begin our document.  You will notice that at the end of the writing there is an end document statements.  Many options use this begin and end syntax.
 
-\maketitle
+\begin{center}
+    \Large CSE541 Advanced Algorithm Note
+\end{center}
 
 \section{Background}
+
+During my exchange in WashU, I've typed some of my notes from lectures and collaborated some with online resources and my understanding. This is mainly for the course - Advanced Algorithm, as the professor doesn't have a typed note. Since I typed the notes quite rush, there maybe some mistakes or typos. I've typed the note mainly for my revision and probably future review. But I am also glad if this note can help anyone need it.
+
+\section{NP-completeness} 
+
+
+
 
 
 \end{document}
