added topic 13 ctmc for stochastic process

--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,8 @@ During my exchange in WashU, I've typed some of my notes from lectures and colla
 
 \section{NP-completeness} 
 
-
+P: can be solved by polynomial time algorithm
+NP: can be verified by polynomial time algorithm
 
 
 
